# iniparse

./: .gitlab-ci.yml  CMakeLists.txt  README.md  iniparse.c  iniparse.h  list.h  main.c  test.c  test.ini
docker/: Dockerfile  compose.yaml  docker-build.sh
docker/gitlab-runner-config/: config.toml
tests/: test.ini
